# prototype

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  NOTES.md  QUESTIONS.md  README.md  TODO.md  config.example.toml  config.toml  docker-compose.yml
.github/workflows/: audit.yml  docker.yml  test.yml
contrib/: docker-compose.yml
script/: utils.py
sql/: bitcoin_mainnet.sql  bitcoin_testnet.sql  dogecoin_mainnet.sql  dogecoin_testnet.sql  litecoin_mainnet.sql  litecoin_testnet.sql  namecoin_mainnet.sql  signatures.sql
src/: configs.rs  database.rs  duplicate.rs  main.rs  networks.rs  peer.rs  utils.rs
src/p2p/: addr.rs  address.rs  block.rs  error.rs  get_blocks.rs  get_data.rs  inventory.rs  message.rs  mod.rs  ping.rs  tx.rs  utils.rs  version.rs
