[package]
name = "prototype"
edition = "2021"
authors = ["Lola Rigaut-Luczak <me@laflemme.lol>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
magic-bytes = "0.1.0"
postgres = { version = "0.19" }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10.9"
varint = {package = "bitcoin-varint", version = "0.1.0"}
